Bootstrapify the UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <br /><br /><br /><br />
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Created with love by <a href="http://www.github.com/timothychen01">Timothy Chen</a>. Copyright 2016.</p>
+      </div>
+    </footer>
   </body>
 </html>
