--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <br /><br /><br /><br />
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Created with love by <a href="http://www.github.com/timothychen01">Timothy Chen</a>. Copyright 2016.</p>
+        <p class="text-muted">Created with <i class="fa fa-heart"></i> by <a href="http://www.github.com/timothychen01">Timothy Chen</a>. Copyright 2016.</p>
       </div>
     </footer>
   </body>
