Censor bad word headings

--- a/app/views/pages/analysis.html.erb
+++ b/app/views/pages/analysis.html.erb
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-lg-6">
         <% @isolated_bad_lines.each do |bad_word, bad_lines| %>
-          <h4><%= bad_lines.count %> instances of <i><%= bad_word %></i> found:</h4>
+          <h4><%= bad_lines.count %> instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
           <% bad_lines.each do |bad_line| %>
             <%= bad_line %><br />
           <% end %>
@@ -14,7 +14,7 @@
       </div>
       <div class="col-lg-6">
         <% @uniq_isolated_bad_lines.each do |bad_word, bad_lines| %>
-          <h4><%= bad_lines.count %> unique instances of <i><%= bad_word %></i> found:</h4>
+          <h4><%= bad_lines.count %> unique instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
           <% bad_lines.each do |bad_line| %>
             <%= bad_line %><br />
           <% end %>
