--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1 class="page-header">Will grandma approve of my music taste?</h1>
 
-<%= form_tag pages_analysis_path do %>
+<form action="<%= pages_analysis_path %>" method="get">
   <div class="form-group">
     <label for="song">Song</label>
     <%= text_field_tag :song, nil, class: "form-control" %>
@@ -9,5 +9,5 @@
     <label for="artist">Artist</label>
     <%= text_field_tag :artist, nil, class: "form-control" %>
   </div>
-  <%= submit_tag "Analyze", class: "btn btn-default" %>
-<% end %>
+  <%= submit_tag "Analyze", class: "btn btn-default", name: nil %>
+</form>
