--- a/app/views/pages/analysis.html.erb
+++ b/app/views/pages/analysis.html.erb
@@ -2,7 +2,7 @@
   <h1 class="page-header"><%= @song %> <small><%= @artist %></small><%= link_to "Analyze another song!", root_path, class: "btn btn-default pull-right" %></h1>
   <h2 class="centered lyrics">Final Verdict...<%= @sfw ? "Grandma approves!" : "Grandma disapproves." %></h2>
 
-  <% if !@sfw %>
+  <% if !@sfw && @uniq_isolated_bad_lines %>
     <div class="row">
       <div class="col-lg-6">
         <% @uniq_isolated_bad_lines.each do |bad_word, bad_lines| %>
@@ -18,15 +18,18 @@
   <% end %>
 
 
-
-  <div class="col-lg-6" style="display:none">
-    <% @isolated_bad_lines.each do |bad_word, bad_lines| %>
-      <h4><%= bad_lines.count %> instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
-      <% bad_lines.each do |bad_line| %>
-        <%= bad_line %><br />
+  <% if @uniq_isolated_bad_lines %>
+    <div class="col-lg-6" style="display:none">
+      <% @isolated_bad_lines.each do |bad_word, bad_lines| %>
+        <h4><%= bad_lines.count %> instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
+        <% bad_lines.each do |bad_line| %>
+          <%= bad_line %><br />
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+  
+
   <p class="centered lyrics">
     <%#= @lyrics.html_safe %>
     <%= @highlighted_lyrics.html_safe %>
