--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1 class="page-header">Will grandma approve of my music taste?</h1>
 
-<form action="<%= pages_analysis_path %>" method="get">
+<form action="<%= analysis_path %>" method="get">
   <div class="form-group">
     <label for="song">Song</label>
     <%= text_field_tag :song, nil, class: "form-control" %>
