--- a/app/views/pages/analysis.html.erb
+++ b/app/views/pages/analysis.html.erb
@@ -1,41 +1,39 @@
 <% if @valid_input %>
   <h1 class="page-header"><%= @song %> <small><%= @artist %></small><%= link_to "Analyze another song!", root_path, class: "btn btn-default pull-right" %></h1>
-  <h2 class="centered lyrics">Final Verdict...<%= @sfw ? "Grandma approves!" : "Grandma disapproves." %></h2>
+  <h2 class="centered title">Final Verdict...<%= @sfw ? "Grandma approves!" : "Grandma disapproves." %></h2>
 
-  <% if !@sfw && @uniq_isolated_bad_lines %>
+  <% if !@sfw %>
     <div class="row">
       <div class="col-lg-6">
         <% @uniq_isolated_bad_lines.each do |bad_word, bad_lines| %>
-          <h4><%= bad_lines.count %> unique instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
-          <% bad_lines.each do |bad_line| %>
-            <mark class="bad-line-highlight"><%= bad_line %></mark><br />
-          <% end %>
+          <div class="alert alert-info">
+            <h4><%= bad_lines.count %> unique instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
+            <% bad_lines.each do |bad_line| %>
+              <mark class="bad-line-highlight"><%= bad_line %></mark><br />
+            <% end %>
+          </div>
         <% end %>
       </div>
     </div>
 
-    <br /><br /><br /><br />
+    <br /><br />
   <% end %>
 
 
-  <% if @uniq_isolated_bad_lines %>
-    <div class="col-lg-6" style="display:none">
-      <% @isolated_bad_lines.each do |bad_word, bad_lines| %>
-        <h4><%= bad_lines.count %> instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
-        <% bad_lines.each do |bad_line| %>
-          <%= bad_line %><br />
-        <% end %>
+  <div class="col-lg-6" style="display:none">
+    <% @isolated_bad_lines.each do |bad_word, bad_lines| %>
+      <h4><%= bad_lines.count %> instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
+      <% bad_lines.each do |bad_line| %>
+        <%= bad_line %><br />
       <% end %>
-    </div>
-  <% end %>
-  
+    <% end %>
+  </div>
+
 
   <p class="centered lyrics">
-    <%#= @lyrics.html_safe %>
     <%= @highlighted_lyrics.html_safe %>
   </p>
 <% else %>
-  <%# controller.redirect_to root_path %>
   <h1 class="page-header">Oops...something went wrong!<%= link_to "Analyze another song!", root_path, class: "btn btn-default pull-right" %></h2>
   <div class="alert alert-danger"><%= @error_notice %></div>
 <% end %>
