--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  font-family: 'Raleway', sans-serif;
 }
 .footer {
   position: absolute;
@@ -44,7 +45,8 @@ body {
   padding-bottom: 20px;
 }
 .lyrics {
-
+  font-size: 1.3em;
+  line-height: 1.5em;
 }
 .bad-line-highlight {
   background-color: yellow;
