Fix Lyricfy bugs
Correctly query for just the song name and catch exceptions thrown

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Will grandma approve of my music taste?</h1>
+<h1 class="page-header">Would Grandma approve of my music taste?</h1>
 
 <form action="<%= analysis_path %>" method="get">
   <div class="form-group">
