--- a/app/views/pages/analysis.html.erb
+++ b/app/views/pages/analysis.html.erb
@@ -7,7 +7,7 @@
       <div class="col-lg-6">
         <% @uniq_isolated_bad_lines.each do |bad_word, bad_lines| %>
           <div class="alert alert-info">
-            <h4><%= bad_lines.count %> unique instances of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
+            <h4><%= bad_lines.count %> unique <%= bad_lines.count > 1 ? "instances" : "instance" %> of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
             <% bad_lines.each do |bad_line| %>
               <%= bad_line %><br />
             <% end %>
