--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,28 @@
 <h1 class="page-header">Would Grandma approve of my music taste?</h1>
 
 <form action="<%= analysis_path %>" method="get">
-  <div class="form-group">
-    <label for="song">Song</label>
-    <%= text_field_tag :song, nil, class: "form-control" %>
+  <div class="col-lg-6 col-xs-12">
+    <div class="form-group">
+      <label for="song">Song Title</label>
+      <%= text_field_tag :song, nil, class: "form-control" %>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="artist">Artist</label>
-    <%= text_field_tag :artist, nil, class: "form-control" %>
+  <div class="col-lg-6 col-xs-12">
+    <div class="form-group">
+      <label for="artist">Artist</label>
+      <%= text_field_tag :artist, nil, class: "form-control" %>
+    </div>
   </div>
-  <%= submit_tag "Analyze", class: "btn btn-default", name: nil %>
+  <div class="col-lg-12">
+    <div class="form-group">
+      <label for="badwords">Custom explicatives to filter (optional)</label>
+      <%= text_field_tag :badwords, nil, placeholder: "Separate words with spaces.", class: "form-control" %>
+    </div>
+    <div class="checkbox">
+      <label><%= check_box_tag :pluralize, 'yes' %>Pluralize my custom words</label>
+    </div>
+  </div>
+  <div class="col-lg-12">
+    <%= submit_tag "Analyze", class: "btn btn-default", name: nil %>
+  </div>
 </form>
