--- a/app/views/pages/analysis.html.erb
+++ b/app/views/pages/analysis.html.erb
@@ -1,12 +1,12 @@
 <% if @valid_input %>
   <h1 class="page-header"><%= @song.downcase.titleize %> <small><%= @artist.downcase.titleize %></small><%= link_to "Analyze another song!", root_path, class: "btn btn-default pull-right" %></h1>
-  <h2 class="centered title">Final Verdict: <%= @sfw ? "Grandma approves!" : "Grandma disapproves." %></h2>
+  <h2 class="centered title"><%= @sfw ? "Grandma approves!" : "Grandma disapproves." %></h2>
 
   <% if !@sfw %>
     <div class="row">
       <div class="col-lg-6">
         <% @uniq_isolated_bad_lines.each do |bad_word, bad_lines| %>
-          <div class="alert alert-info">
+          <div class="alert alert-danger">
             <h4><%= bad_lines.count %> unique <%= bad_lines.count > 1 ? "instances" : "instance" %> of <i><%= bad_word.tr('aeiou', '*') %></i> found:</h4>
             <% bad_lines.each do |bad_line| %>
               <%= bad_line %><br />
