--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div class="container">
         <p class="text-muted">Made with <i class="fa fa-heart"></i> by <a
         href="http://www.github.com/timothychen01">Timothy Chen</a>. Copyright
-        2016.</p>
+        <%= Date.today.year %>.</p>
       </div>
     </footer>
   </body>
